# autoreasearch-cycle

./: README.md  pyproject.toml
docs/: examples.md  prd.md  setup.md
examples/blogui/: config.py  domain.py  main.py
src/autoresearch_cycle/: __init__.py  agent_runner.py  experiment_io.py  lighthouse.py  readiness.py
tests/: test_agent_runner.py  test_helpers.py
