[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "autoresearch-cycle"
version = "0.1.0"
description = "Minimal shared helpers for local autoresearch experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch_cycle"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
